# postgres-explain-visualizer

./: .gitignore  LICENSE  Makefile  README.md  TODO.org  fourmolu.yaml  hie.yaml  postgres-explain-visualizer.cabal  shell.nix
.github/workflows/: ci.yml  heroku.yml
app/: Main.hs
migrations/: 20220519174700_extensions_and_date_procs.sql  20220519174800_add_plan_table.sql  20220923144100_add_user_table.sql
nix/: docker.nix  extra-deps.nix  packages.nix  release.nix  sources.json
src/: PostgresExplainVisualizer.hs
src/Database/: Pool.hs
src/PostgresExplainVisualizer/: Environment.hs  Import.hs  Server.hs  Types.hs
src/PostgresExplainVisualizer/Client/Github/: Api.hs
src/PostgresExplainVisualizer/Database/: Migrations.hs  Orphanage.hs  Pool.hs
src/PostgresExplainVisualizer/Effects/: Crypto.hs  Database.hs  Http.hs  Log.hs
src/PostgresExplainVisualizer/Models/: Common.hs  Plan.hs  User.hs
src/PostgresExplainVisualizer/Server/: Pages.hs  Types.hs
src/PostgresExplainVisualizer/Views/: Layout.hs  NewPlan.hs  PEV2.hs  PlanList.hs
static/: about.txt  main.js
static/pev2/: index.html
static/pev2/css/: app.css
static/pev2/js/: app.js  app.js.map  chunk-vendors.js  chunk-vendors.js.map
visualizer-component/: README.md  package-lock.json  package.json  vue.config.js
visualizer-component/public/: index.html
visualizer-component/src/: App.vue  main.js
